--- a/sass/site/secondary/_widgets.scss
+++ b/sass/site/secondary/_widgets.scss
@@ -15,6 +15,7 @@
 	ul {
 		padding-top: 15px;
 		padding-bottom: 15px;
+		padding-right: 15px;
 	}
 
 	table {
@@ -26,4 +27,7 @@
 		border: none;
 		box-shadow: none;
 	}
+
+	
 }
+
